fetat: newsletter endpoints
